# distributed_robot_sys

./: .gitignore  README  a_robot.workspace
bagfiles/: laser0.bag  laser1.bag  laser2.bag  laser3.bag  laser4.bag
build-src-Desktop-Debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  Project.cbp  cmake_install.cmake
build-src-Desktop-Debug/a_robot_platform/: CTestTestfile.cmake  Makefile  a_robot_platform.cbp  cmake_install.cmake
build-src-Desktop-Debug/a_robot_platform/catkin_generated/: pkg.develspace.context.pc.py
build-src-Desktop-Debug/a_robot_platform/catkin_generated/installspace/: a_robot_platform.pc  a_robot_platformConfig.cmake
build-src-Desktop-Debug/amcl/: CTestTestfile.cmake  Makefile  amcl.cbp  cmake_install.cmake
build-src-Desktop-Debug/amcl/catkin_generated/: pkg.develspace.context.pc.py
build-src-Desktop-Debug/amcl/catkin_generated/installspace/: amclConfig.cmake
build-src-Desktop-Debug/catkin_generated/: generate_cached_setup.py  order_packages.cmake  order_packages.py  setup_cached.sh
build-src-Desktop-Debug/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
build-src-Desktop-Debug/map_server/: CTestTestfile.cmake  Makefile  cmake_install.cmake  map_server.cbp
build-src-Desktop-Debug/map_server/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
build-src-Desktop-Debug/map_server/catkin_generated/installspace/: map_server.pc  map_serverConfig.cmake
img/: gsub.pgm  gt1-1.pgm  gt1-1.yaml  gt1-2.pgm  gt1-2.yaml  gt1-3.pgm  gt1-3.yaml  gt1-4.pgm  gt1-4.yaml  gt2-1.pgm  gt2-1.yaml  gt2-2.pgm  gt2-2.yaml  gt3-1.pgm  gt3-1.yaml  gt3-2.pgm  gt3-2.yaml  gt3-3.pgm  gt3-3.yaml
img/map/: gtest.pgm  gtest.yaml  gtest0.yaml  gtest1.pgm  gtest1.yaml  gtest10.pgm  gtest2.pgm  gtest2.yaml  gtest3.pgm  gtest4.yaml  gtest5.pgm  gtest6.yaml  gtest7.pgm  gtest7.yaml
img/navi_g/: ins10.txt  ins9.txt
location/src/amcl/examples/: orange_diff.launch
sh/: README  amcl.sh  google_make.sh  google_mapping.sh  google_mapsave.sh  ip.sh  location.sh  location_rviz.sh  map_rviz.sh  pose_test.sh  pose_test_rviz.sh  robot_config.sh  server_amcl.sh  server_location.sh  server_mapping.sh
src/: CMakeLists.txt.user.10c01ac  CMakeLists.txt.user.9b50bcf  README
src/a_robot_platform/: CMakeLists.txt  package.xml
src/a_robot_platform/launch/: call_pose.launch  config.launch  laser.launch  location.launch  location.rviz  map_server.launch  odom.launch  orange_car.urdf  path.launch  pose_test.launch  server_location.launch  slam.rviz  speed.launch  test.rviz  urdf.launch
src/a_robot_platform/map/: gtest1.pgm  gtest1.yaml  gtest10.yaml  gtest2.pgm  gtest2.yaml  gtest3.yaml  gtest4.pgm  gtest5.yaml  gtest6.pgm  gtest8.pgm  gtest8.yaml  gtest9.pgm  gtest9.yaml
src/a_robot_platform/msg/: SubmapEntry.h  SubmapList.h  TrajectorySubmapList.h
src/a_robot_platform/src/client/: Makefile  key_control.cpp  key_control.h  tcp_socket.cpp  tcp_socket.h  udp_socket.cpp  udp_socket.h  ui_mainwindow.h
src/a_robot_platform/src/client/qt_client/: mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_key_control.cpp  moc_mainwindow.cpp  moc_tcp_socket.cpp  moc_udp_socket.cpp  qt_client.pro  qt_client.pro.user.10c01ac  ui_mainwindow.h
src/a_robot_platform/src/common/: common.h  map_image.cpp  map_image.h  map_process.cpp  map_process.h  modbus.cpp  modbus.h  paramodbus.cpp  paramodbus.h  paras.cpp  paras.h  use_display.h
src/a_robot_platform/src/location/: amcl_location.cpp  amcl_location.h
src/a_robot_platform/src/location/amcl/pf/: pf.c  pf_kdtree.c
src/a_robot_platform/src/location/amcl/sensors/: amcl_laser.cpp  amcl_laser.h
src/a_robot_platform/src/location/scan_match/: data_point_container.h  scan_processor.cpp  scan_processor.h
src/a_robot_platform/src/map/: mapreadandwrite.cpp  mapreadandwrite.h  probability_values.cpp  probability_values.h
src/a_robot_platform/src/nav/: main_nav.cpp  nav.cpp  nav.h
src/a_robot_platform/src/server/: .uartodompthread.h.swp  main_global_location.cpp  main_initial_pose_test.cpp  main_map_server.cpp  main_path_publish.cpp  main_pathplan_server.cpp  main_pathplan_server.h  main_sub_pose.cpp  main_test_v.cpp  main_uart_laser.cpp  main_uart_odom.cpp  moc_tcp_server.cpp  moc_tcpsocketserver.cpp  moc_udpsocketserver.cpp  tcpsocketserver.cpp  tcpsocketserver.h  uartdriver.cpp  uartdriver.h  uartlaser.cpp  uartlaser.h  uartodom.cpp  uartodom.h  uartodompthread.cpp  uartodompthread.h  udpsocketserver.cpp  udpsocketserver.h
src/amcl/examples/: orange_diff.launch
src/build-a_robot_platform-Desktop-Debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  a_robot_platform.cbp  cmake_install.cmake
src/build-a_robot_platform-Desktop-Debug/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/build-a_robot_platform-Desktop-Debug/catkin_generated/installspace/: a_robot_platformConfig.cmake
src/build-a_robot_platform-Desktop-Debug/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
